@@ -1,6 +1,10 @@
 Release 0.6.6 (in development)
 ==============================
 
+* Fix a problem the Qt help project generated by the ``qthelp``
+  builder that would lead to no content being displayed in the Qt
+  Assistant.
+
 * #393: Fix the usage of Unicode characters in mathematic formulas
   when using the ``pngmath`` extension.
 
